# ThreeppGP

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  vcpkg.json
include/: CameraController.hpp  ImguiContext.hpp  Logo.hpp  MC.hpp  MCKeyController.hpp  OilSpill.hpp  Physics.hpp  PowerUp.hpp  PowerUpManager.hpp  SceneManager.hpp  SpeedBoost.hpp  UI.hpp  Vehicle.hpp  VehicleLoader.hpp  VehicleManager.hpp  VehicleStats.hpp
models/ArgentinaTrack/source/: PistaArgentina2.mtl
models/Castrol/source/A8A0JG3NAIHR3JFNL54EL5WL6_obj/: A8A0JG3NAIHR3JFNL54EL5WL6.mtl
models/Ducati/: 1388 Motorcycle.mtl
models/Race track/: Track.fbx
models/Speeder bike/: materials.mtl  materials.mtl.bak
src/: CameraController.cpp  Logo.cpp  OilSpill.cpp  Physics.cpp  PowerUpManager.cpp  SceneManager.cpp  SpeedBoost.cpp  UI.cpp  Vehicle.cpp  VehicleLoader.cpp  VehicleManager.cpp  VehicleStats.cpp
tests/: CMakeLists.txt  testMC.cpp  testPowerUps.cpp
